demos/grpc/record-server/kube/base/presentation-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: presentation-server
spec:
  selector:
    matchLabels:
      app: presentation-server
  template:
    metadata:
      labels:
        app: presentation-server
        component: server
    spec:
      containers:
      - name: presentation-server
        image: presentation-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 50000
          name: grpc
        - containerPort: 50002
          name: grpc-web
