demos/grpc/record-server/kube/base/record-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-grpc-record-server
spec:
  selector:
    matchLabels:
      app: demo-grpc-record-server
  template:
    metadata:
      labels:
        app: demo-grpc-record-server
        component: server
    spec:
      containers:
      - name: record-server
        image: record-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 50000
          name: grpc
        - containerPort: 50002
          name: grpc-web
