demos/grpc/record-server/kube/base/record-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-grpc-record-server
spec:
  selector:
    app: demo-grpc-record-server
    component: server
  ports:
  - name: grpc
    port: 50000
    targetPort: grpc
  - name: grpc-web
    port: 50002
    targetPort: grpc-web
