demos/grpc/record-server/kube/base/presentation-server.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: presentation-server
spec:
  rules:
  - host: apps.v2tools.com
    http:
      paths:
      - path: /presentations/api/(.*)
        backend:
          serviceName: presentation-server
          servicePort: grpc-web
        
  tls:
  - hosts:
    - apps.v2tools.com
    secretName: apps-v2tools-crt
