demos/grpc/record-server/kube/base/record-server.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: demo-grpc-record
spec:
  rules:
  - host: record.grpc.demo.apps.v2tools.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-grpc-users
          servicePort: grpc
        
  tls:
  - hosts:
    - record.grpc.demo.apps.v2tools.com
    secretName: record-grpc-demo-apps-v2tools-crt
